--- a/css/random.css
+++ b/css/random.css
@@ -32,6 +32,23 @@
   background-color: #c01c33;
   color: white;
 }
+.linkred2:link, .linkred2:visited {
+  background-color: #d75c57;
+  color: white;
+  border: 2px solid #d75c57;
+  padding: 14px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 5px;
+  
+}
+
+.linkred2:hover, .linkred2:active {
+  background-color: #c01c33;
+  color: white;
+}
+
 
 #tablo {
   font-family: Arial, Helvetica, sans-serif;
@@ -59,3 +76,47 @@
   color: white;
   text-align: center;
 }
+
+.input[type=text]{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.input[type=email]{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.input[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+div.container {
+  margin-left: 100px;
+  margin-right: 100px;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
