--- a/css/random.css
+++ b/css/random.css
@@ -53,17 +53,13 @@
 #tablo {
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
-  width: 85%;
-  margin-left: 100px;
+  width:100%;
 }
 
 #tablo td, #tablo th {
   border: 1px solid #ddd;
-  padding: 8px;
   text-align: center;
-  
 }
-
 #tablo tr:nth-child(even){background-color: #f2f2f2;}
 
 #tablo tr:hover {background-color: #ddd;}
@@ -137,7 +133,15 @@
 
 .input[type=submit]:hover {
   background-color: #45a049;
+
 }
+div.elipsis{
+  width:150px;
+  border:1px solid #555;
+  padding:5px;
+
+}
+
 
 div.container {
   margin-left: 100px;
@@ -160,6 +164,24 @@ div.container {
   background-color: white;
   cursor: pointer;
 }
+
+.guncelle {
+  color: white;
+  padding: 8px;
+  font-family: Arial;
+  cursor: pointer;
+  border-radius: 5px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+  border:none;
+}
+.success {background-color: #4CAF50;} /* Green */
+.info {background-color: #2196F3;} /* Blue */
+.warning {background-color: #ff9800;} /* Orange */
+.danger {background-color: #f44336;} /* Red */ 
+.other {background-color: #e7e7e7; color: black;} /* Gray */
+}
+
+
 
 
 
